[package]
name = "pi_hash"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "attempt to downcast the triat object to a concrete type"
repository = "https://github.com/GaiaWorld/pi_hash.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "hash", "hashmap", "hashset", "pi_hash"]

[dependencies]
fxhash = "0.2.1"
twox-hash = "1"

[features]
xxhash = []