[package]
name = "pi_hash"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Provide unified hasher, HashMap and HashSet, The hash algorithm used can be determined by compiling conditions."
repository = "https://github.com/GaiaWorld/pi_hash.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "hash", "hashmap", "hashset", "pi_hash"]

[dependencies]
fxhash = "0.2.1"
twox-hash = "1"

[features]
xxhash = []